# hotel-serverless-pipeline

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  lambda_function.py
src/processors/: batch_processor.py  transformations.py
src/services/: s3_service.py
src/utils/: ingestion_utils.py  partition_utils.py
tests/: conftest.py  test_batch_processor.py  test_transformations.py
